# kaz

./: .editorconfig  MANIFEST.in  Pipfile  README.md  README.rst  setup.cfg
.circleci/: config.yml
docs/: conf.py  index.rst
src/kaz/: __init__.py  catalog.py  cli.py  core.py  logging.py
src/kaz/cli/: __init__.py  add.py  app.py  init.py  link.py  pull.py  repo.py  utils.py  version.py
src/kaz/repo/: github.py
tests/: test_apps.py  test_catalog.py  test_cli.py  test_it.py
