[metadata]
name = kaz
version = attr:kaz.__version__
author = Kazuya Takei
author_email = attakei@gmail.com
description = Portable application manager
long_description = file:README.md

url = https://github.com/attakei/kaz-python
license = GPLv3

[options]
package_dir =
    = src
packages = find:
install_requires =
    click

[options.packages.find]
exclude =
    tests

[options.extras_require]
linting =
    flake8
testing =
    pytest

[options.entry_points]
console_scripts =
    kaz=kaz.cli:main
