[metadata]
name = kaz
version = file:src/kaz/version.txt
author = Kazuya Takei
author_email = attakei@gmail.com
description = Portable application manager
long_description = file:README.md

url = https://github.com/attakei/kaz-python
license = GPLv3

[options]
package_dir =
    = src
packages = find:
install_requires =
    click
    requests
    PyGithub

[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
    pytest
    flake8

[options.entry_points]
console_scripts =
    kaz=kaz.cli:main
